<resources>
    <string name="app_name">WickedTwister</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="social_security_number">Social Securty Number</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="nickname">Nickname</string>
    <string name="login_missing_credentials">Missing Social Security Number and/or Password!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wrong_SSN_or_PWD">Wrong Social Security Number and/or Password!</string>
    <string name="create_account">Create Account</string>
    <string name="cthulhu_do_mal">Cthulhu do mal.</string>
    <string name="sign_in">Sign In</string>

    <string name="account_money">SEK %1$d</string>
    <string name="unset_money">SEK %1$d</string>
    <string name="flag">Flag</string>
    <string name="caraio">caraio</string>

    <string name="shows_positive_or_negative_accountmovement">Shows positive or negative accountmovement.</string>
    <string name="account_item_name">Name</string>
    <string name="account_item_value">SEK %1$d</string>
    <string name="account_item_date">Date</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add Account</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="account_alias">Account Alias</string>
    <string name="account_tag">Account Tag</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="tag">Tag</string>
    <string name="sender_receiver">Sender/Receiver</string>
    <string name="bank_of_sweden">Bank of Sweden</string>
    <string name="sek_6768_00">SEK 6768.00</string>
    <string name="food">Food</string>
    <string name="scania_ab">Scania AB</string>
    <string name="_2021_10_21">2021-10-21</string>
    <string name="refresh_day">Refresh Day (1 to 28)</string>
    <string name="not_a_valid_location">Not a valid Location.</string>
    <string name="add_date">Add Date</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="add_budget">Add Budget</string>
    <string name="payment">Payment</string>
    <string name="expense">Expense</string>
    <string name="budget_type">Budget Type</string>

</resources>