<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">
    <ImageView
        android:id="@+id/main_user_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/cthulhu_do_mal"
        android:src="@drawable/ic_cthulhu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/lime"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/user_main_user_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_username"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/main_user_image"
        app:layout_constraintLeft_toRightOf="@id/main_user_image"
        app:layout_constraintTop_toTopOf="@id/main_user_image" />
    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_valid_location"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/main_user_image"
        app:layout_constraintTop_toTopOf="@id/main_user_image"/>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/gear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/settings" />

</androidx.constraintlayout.widget.ConstraintLayout>