<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menu">

    <ImageView
        android:id="@+id/main_user_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/cthulhu_do_mal"
        android:src="@drawable/ic_cthulhu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/lime"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/user_main_user_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_username"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@id/main_user_image"
        app:layout_constraintLeft_toRightOf="@id/main_user_image"
        app:layout_constraintTop_toTopOf="@id/main_user_image" />

    <Button
        android:id="@+id/menu_add_account_button"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="300dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/lime"
        android:text="@string/add_account"
        android:textColor="@color/CthulhuPurple"/>
    <Button
        android:id="@+id/menu_add_transaction_button"
        android:layout_width="190dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@id/add_account_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="75dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/lime"
        android:text="@string/add_transaction"
        android:textColor="@color/CthulhuPurple"/>

</androidx.constraintlayout.widget.ConstraintLayout>