<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginStart="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginEnd="3dp"
    android:layout_marginTop="3dp"
    android:background="@drawable/transactionbackground">

    <TextView
        android:id="@+id/tra_card_tra_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:text="@string/sek_6768_00"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="25dp" />

    <TextView
        android:id="@+id/tra_card_tag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tra_card_tra_value"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="2dp"/>

    <TextView
        android:id="@+id/tra_card_tra_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scania_ab"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tra_card_tra_value"
        app:layout_constraintBottom_toBottomOf="@id/tra_card_tra_value"
        app:layout_constraintTop_toTopOf="@id/tra_card_tra_value"
        android:layout_marginStart="100dp"/>

    <TextView
        android:id="@+id/tra_card_tra_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2021_10_21"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="@id/tra_card_tra_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="2dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>