<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddUser"
    android:background="@color/black">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="0dp"
            android:contentDescription="@string/cthulhu_do_mal"
            android:src="@drawable/ic_cthulhu"
            app:layout_constraintBottom_toTopOf="@id/add_user_doc"
            app:layout_constraintLeft_toLeftOf="@id/add_user_doc"
            app:layout_constraintRight_toRightOf="@id/add_user_doc"
            app:tint="@color/lime" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_user_doc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/CthulhuPurple"
            android:hint="@string/social_security_number"
            android:theme="@style/TextInputLayout"
            app:hintTextColor="@color/CthulhuPurple"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/lime"
            app:layout_constraintBottom_toTopOf="@+id/add_user_email"
            app:layout_constraintEnd_toEndOf="@+id/add_user_email"
            app:layout_constraintStart_toStartOf="@+id/add_user_email"
            android:layout_marginBottom="13dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/CthulhuPurple" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_user_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/CthulhuPurple"
            android:hint="@string/e_mail"
            android:theme="@style/TextInputLayout"
            app:hintTextColor="@color/CthulhuPurple"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/lime"
            app:layout_constraintBottom_toTopOf="@+id/add_user_pwd"
            app:layout_constraintEnd_toEndOf="@+id/add_user_pwd"
            app:layout_constraintStart_toStartOf="@+id/add_user_pwd"
            android:layout_marginBottom="13dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/CthulhuPurple"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_user_pwd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/CthulhuPurple"
            android:hint="@string/password"
            android:theme="@style/TextInputLayout"
            app:hintTextColor="@color/CthulhuPurple"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/lime"
            app:layout_constraintBottom_toTopOf="@+id/add_user_nickname"
            app:layout_constraintEnd_toEndOf="@+id/add_user_nickname"
            app:layout_constraintStart_toStartOf="@+id/add_user_nickname"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/CthulhuPurple"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_user_nickname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/CthulhuPurple"
            android:hint="@string/nickname"
            android:theme="@style/TextInputLayout"
            app:hintTextColor="@color/CthulhuPurple"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/lime"
            app:layout_constraintBottom_toTopOf="@+id/add_user_button"
            app:layout_constraintEnd_toEndOf="@+id/add_user_button"
            app:layout_constraintStart_toStartOf="@+id/add_user_button"
            android:layout_marginBottom="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/CthulhuPurple"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/add_user_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/lime"
            android:backgroundTint="@color/CthulhuPurple"
            android:layout_marginBottom="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>